--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; URL=/src/public/index.html" />
+<meta http-equiv="refresh" content="0; URL=/dist/index.html" />
